[project]
name = "contexto-champion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.3",
    "ipykernel>=6.30.0",
    "nltk>=3.9.1",
    "tqdm>=4.67.1",
    "torch~=2.7.0",
    "torchvision~=0.22.0",
    "torchaudio~=2.7.0",
    "trl>=0.19.1",
    "verifiers>=0.1.2",
    "vllm>=0.10.0",
    "unsloth>=2025.7.11",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]

[tool.uv]
prerelease = "allow"       # keep lock & sync consistent
override-dependencies = [
  "triton>=3.4.0"          # overrides every triton pin inside the tree
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "triton-nightly"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/Triton-Nightly/pypi/simple"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [
  ".venv/**",                   # don’t index your virtual‑env
  "unsloth_compiled_cache/**",  # don’t index the Unsloth cache
]

[tool.ruff.lint]
# skip linting notebook files
exclude = ["*.ipynb"]
